# basemark-cli

./: Cargo.toml  README.md
src/: client.rs  config.rs  convert.rs  main.rs  mcp.rs  output.rs
src/commands/: collections.rs  config_cmd.rs  create.rs  delete.rs  list.rs  mod.rs  read.rs  search.rs  share.rs  update.rs
